Fixed alignments of menu image glow on hover

--- a/web/themes/custom/sis/css/style.css
+++ b/web/themes/custom/sis/css/style.css
@@ -192,24 +192,23 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 .scientist-menu .views-view-grid .views-col {
   padding: 20px;
 }
-.scientist-menu .views-view-grid .views-col a {
-  display: block;
+.scientist-menu .views-view-grid .views-col img {
   -webkit-box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
 }
-.scientist-menu .theme-magenta a:hover {
+.scientist-menu .theme-magenta img:hover {
   -webkit-box-shadow: 0 5px 10px 10px rgba(186, 14, 130, 0.5);
   box-shadow: 0 5px 10px 10px rgba(186, 14, 130, 0.5);
 }
-.scientist-menu .theme-blue a:hover {
+.scientist-menu .theme-blue img:hover {
   -webkit-box-shadow: 0 5px 10px 10px rgba(72, 93, 170, 0.5);
   box-shadow: 0 5px 10px 10px rgba(72, 93, 170, 0.5);
 }
-.scientist-menu .theme-green a:hover {
+.scientist-menu .theme-green img:hover {
   -webkit-box-shadow: 0 5px 10px 10px rgba(85, 164, 61, 0.5);
   box-shadow: 0 5px 10px 10px rgba(85, 164, 61, 0.5);
 }
-.scientist-menu .theme-teal a:hover {
+.scientist-menu .theme-teal img:hover {
   -webkit-box-shadow: 0 5px 10px 10px rgba(0, 164, 179, 0.5);
   box-shadow: 0 5px 10px 10px rgba(0, 164, 179, 0.5);
 }
