--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -1,24 +1,24 @@
 .scientist-menu
   .views-view-grid .views-col
     padding: 20px
-    a
-      display: block
+    img
+      //display: block
       -webkit-box-shadow: 0 5px 10px 10px rgba(0,0,0,.2)
       box-shadow: 0 5px 10px 10px rgba(0,0,0,.2)
   .theme-magenta
-    a:hover
+    img:hover
       -webkit-box-shadow: 0 5px 10px 10px rgba(186,14,130,.5)
       box-shadow: 0 5px 10px 10px rgba(186,14,130,.5)
   .theme-blue
-    a:hover
+    img:hover
       -webkit-box-shadow: 0 5px 10px 10px rgba(72,93,170,.5)
       box-shadow: 0 5px 10px 10px rgba(72,93,170,.5)
   .theme-green
-    a:hover
+    img:hover
       -webkit-box-shadow: 0 5px 10px 10px rgba(85,164,61,.5)
       box-shadow: 0 5px 10px 10px rgba(85,164,61,.5)
   .theme-teal
-    a:hover
+    img:hover
       -webkit-box-shadow: 0 5px 10px 10px rgba(0,164,179,.5)
       box-shadow: 0 5px 10px 10px rgba(0,164,179,.5)
 
